--- a/admin/a/src/components/AddSeats/AddSeats.css
+++ b/admin/a/src/components/AddSeats/AddSeats.css
@@ -16,7 +16,7 @@
 .seat {
     width: 50px;
     height: 50px;  
-    background-color: #90A17D;
+    background-color: #b42424;
     border: 2px solid rgb(146, 145, 145); 
     border-radius: 50px; 
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
