--- a/admin/a/src/components/Footer/footer.css
+++ b/admin/a/src/components/Footer/footer.css
@@ -5,7 +5,7 @@
   margin-top: auto;
   width: 100%;
   padding: 20px 0;
-  background-color: #90A17D; 
+  background-color: #b42424; 
 }
 
 .footer-content {
@@ -16,23 +16,23 @@
   text-decoration: none;
   font-size: 14px;
   line-height: 1.5;
-  background-color: #90A17D; 
+  background-color: #b42424; 
 }
 
 .footer-content p {
   margin: 0;
-  background-color: #90A17D; 
+  background-color: #b42424; 
 }
 
 .footer-content a {
   color: #ffffff;
   text-decoration: none; 
-  background-color: #90A17D; 
+  background-color: #b42424; 
 }
 
 .footer-content p1{
   color: #f2f2f2;
-  background-color:#90A17D;
+  background-color:#b42424;
   font-size: 14px;
 
 }
@@ -48,11 +48,11 @@
   justify-content: center;
   padding: 0;
   margin: 0;
-  background-color: #90A17D; 
+  background-color: #b42424; 
 }
 
 .credits-list li {
   margin: 5px 15px; 
-  background-color: #90A17D; 
+  background-color: #b42424; 
 }
 
