--- a/admin/a/src/pages/Home/Home.css
+++ b/admin/a/src/pages/Home/Home.css
@@ -46,7 +46,7 @@
     width: 300px;
     padding: 15px 0;
      font-family: Arial, Helvetica, sans-serif;
-   background-image: linear-gradient(to bottom, #829460, #9ab370);
+   background-image: linear-gradient(to bottom, #b42424, #db2f2f);
     color: #ffffff;
     font-family: Arial, sans-serif;
     border: 2px solid #00000033;
