--- a/admin/a/src/pages/Login/Login.css
+++ b/admin/a/src/pages/Login/Login.css
@@ -59,7 +59,7 @@
 .login-button {
     width: 100%;
     padding: 10px 0;
-    background-image: linear-gradient(to bottom, #829460, #b27f95);
+    background-image: linear-gradient(to bottom, #b42424, #b27f95);
     color: #F2F2F2;
     border: 2px solid #22262534;
     border-radius: 8px;
