--- a/admin/a/src/pages/Login/Login.css
+++ b/admin/a/src/pages/Login/Login.css
@@ -3,7 +3,7 @@
     justify-content: center; 
     align-items: center; 
     height: 100vh; 
-    background-image: url('https://lh3.googleusercontent.com/p/AF1QipOEPpGFmQ3MUN5Vkvc4D0-6X7eZuLbiSWcjRxbi=s1360-w1360-h1020');
+    background-image: url('../../assets/llogin.jpg');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
