--- a/admin/a/src/components/AddReservation/AddReservation.css
+++ b/admin/a/src/components/AddReservation/AddReservation.css
@@ -8,11 +8,11 @@
 
 .add-reservation-title {
     font-size: 40px;
-    color: #f2f2f2;
+    color: #000000;
     margin-bottom: 20px; 
     text-align: center;
     text-transform: uppercase;
-    background-color: #E4AEC5;
+    background-color: #ffffff;
     width: 98%;
     padding: 1%;
     margin: 0;
