--- a/admin/a/src/components/OngoingReservationTable/OngoingReservationTable.css
+++ b/admin/a/src/components/OngoingReservationTable/OngoingReservationTable.css
@@ -7,11 +7,11 @@
   }
   .table-title {
     font-size: 40px;
-    color: #f2f2f2; 
+    color: #000000; 
     margin-bottom: 20px; 
     text-align: center;
     text-transform: uppercase;
-    background-color: #E4AEC5;
+    background-color: #ffffff;
     width: 98%;
     padding: 1%;
     margin: 0;
