--- a/admin/a/src/pages/Home/Home.css
+++ b/admin/a/src/pages/Home/Home.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-image: url('../../assets/home-background.jpg'); 
+    background-image: url('../../assets/home.jpg'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
