--- a/admin/a/src/pages/SeatMap/SeatMap.css
+++ b/admin/a/src/pages/SeatMap/SeatMap.css
@@ -5,11 +5,11 @@
 
 .seatMap-title {
     font-size: 40px;
-    color: #f2f2f2;
+    color: #000000;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     text-transform: uppercase;
-    background-color: #E4AEC5;
+    background-color: #ffffff;
     width: 98%; /* Adjust width to fit the parent container */
     padding: 1%;
     margin: 0;
