--- a/admin/a/src/components/DisplayCode/DisplayCode.css
+++ b/admin/a/src/components/DisplayCode/DisplayCode.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-image: url('../../assets/display.jpg'); 
+    background-image: url('../../assets/display-final.jpg'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
